--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
-@import './vendor/normalize.css'
+@import './blocks/base/vars.scss';
+@import './blocks/base/null.scss';
+@import './blocks/base/mixins.scss';
+@import './blocks/wrapper.scss';
+@import './blocks/container.scss';
+@import './blocks/main-screen.scss';
+@import './blocks/page.scss';
+@import './blocks/header.scss';
+@import './blocks/menu.scss';
+@import './blocks/burger.scss';
+@import './blocks/generation.scss';
+@import './blocks/block.scss';
+@import './blocks/brands.scss';
+@import './blocks/slider.scss';
+@import './blocks/shop.scss';
+@import './blocks/subscribe.scss';
+@import './blocks/footer.scss';
