--- a/src/blocks/menu.scss
+++ b/src/blocks/menu.scss
@@ -1,15 +1,19 @@
 .menu {
   &__list {
     display: flex;
+
     li {
       position: relative;
       padding: 0 37px;
+
       &:nth-child(2) {
         padding: 0 110px 0 37px;
       }
+
       &:nth-child(3) {
         padding: 0 37px 0 110px;
       }
+
       &:after {
         content: "";
         width: 4px;
@@ -21,6 +25,7 @@
         top: 50%;
         margin-top: -2px;
       }
+
       &:nth-child(2),
       &:last-child {
         &:after {
@@ -29,55 +34,67 @@
       }
     }
   }
+
   &__link {
     font-size: 13px;
     color: rgb(77, 73, 89);
     font-weight: bold;
     text-transform: uppercase;
     line-height: 1.2;
+
     &:hover {
       opacity: 0.6;
     }
   }
 
   @media (max-width: 767px) {
+    width: 100%;
+
     &__body {
-      position: fixed;
+      position: relative;
+      top: 150px;
       width: 100%;
       height: 100%;
-      top: 0;
-      left: 0;
       background-color: rgb(77, 73, 89);
-      padding-top: 150px;
+      padding-top: 160px;
+      padding-bottom: 100px;
       transition: all 0.3s ease 0s;
       overflow: auto;
       @include tr(0, -150%);
+
       &.active {
         @include tr(0, 0);
       }
     }
+
     &__link {
       color: rgb(255, 255, 255);
       font-size: 20px;
     }
+
     &__list {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
       li {
         padding: 0 0 35px 0;
+
         &:nth-child(2),
         &:nth-child(3) {
           padding: 0 0 35px 0;
         }
+
         &:last-child {
           padding: 0;
         }
+
         &:after {
           background-color: rgb(255, 255, 255);
           right: 50%;
           top: 42px;
         }
+
         &:nth-child(2) {
           &:after {
             display: block;
